# CSH

./: .gitignore  .gitmodules  CMakeLists.txt  CSH.xcf  README.md  build_state.json
src/: main.c  string_handling.c  string_handling.h  typedefs.h
src/CSH/: main.c  string_handling.c  string_handling.h
src/CSH-GUI/: error_macros.h  main.c
