cmake_minimum_required(VERSION 3.0)

project(CSH C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

if(MSVC)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
endif()

file(GLOB CSH_SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/*.c")
add_executable(CSH ${CSH_SOURCE_FILES})

if(MSVC)
	set_target_properties(CSH PROPERTIES VS_DEBUGGER_WORKING_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()
