cmake_minimum_required(VERSION 3.0)

###############
# CSH | BEGIN #
###############

project(CSH C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

if(MSVC)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
endif()

file(GLOB CSH_SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/CSH/*.c")
add_executable(CSH ${CSH_SOURCE_FILES})

if(MSVC)
	set_target_properties(CSH PROPERTIES VS_DEBUGGER_WORKING_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

#############
# CSH | END #
#############

###################
# CSH-GUI | BEGIN #
###################

project(CSH-GUI C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

if(MSVC)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
endif()

add_subdirectory("external-dependencies/SDL")
add_subdirectory("external-dependencies/SDL_ttf")

file(GLOB CSH-GUI_SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/CSH-GUI/*.c")
add_executable(CSH-GUI ${CSH-GUI_SOURCE_FILES})

target_include_directories(CSH-GUI PUBLIC "external-dependencies/SDL/include")
target_link_libraries(CSH-GUI PUBLIC SDL3-shared)

target_include_directories(CSH-GUI PUBLIC "external-dependencies/SDL_ttf/include")
target_link_libraries(CSH-GUI PUBLIC SDL3_ttf)

if(MSVC)
	set_target_properties(CSH-GUI PROPERTIES VS_DEBUGGER_WORKING_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

#################
# CSH-GUI | END #
#################
